--- a/index.html
+++ b/index.html
@@ -51,26 +51,26 @@
             <div class="container-drink">
                 <div id="div1" class="circulo active" style="background-color: #2b5942;">
                     <div class="img ">
-                        <img src="img/drink-chocolate.png" alt="drink-chocolate">
+                        <img src="img/drink-chocolate.png" alt="drink">
                     </div>
                 </div>
                 <div id="div2" class="circulo " style="background-color: #e2c5be;">
                     <div class="img2 ">
-                        <img src="img/coffee-drink-starbucks-latte-free.png" alt="drink-chocolate">
+                        <img src="img/coffee-drink-starbucks-latte-free.png" alt="drink">
                     </div>
                 </div>    
                 <div id="div3" class="circulo " style="background-color: #b24081;">
                     <div class="img3">
-                        <img class="img1" src="img/frappuccino-drink.png"  alt="drink-chocolate">
+                        <img class="img1" src="img/frappuccino-drink.png"  alt="drink">
                     </div>
                 </div>
             </div>
 
                
             <div class="img-menor">
-                <img onclick="showDiv('div1')" src="img/drink-chocolate.png" alt="">
-                <img onclick="showDiv('div2')" src="img/coffee-drink-starbucks-latte-free.png" alt="">
-                <img onclick="showDiv('div3')" src="img/frappuccino-drink.png" alt="">
+                <img onclick="showDiv('div1')" src="img/drink-chocolate.png" alt="drink-chocolate">
+                <img onclick="showDiv('div2')" src="img/coffee-drink-starbucks-latte-free.png" alt="drink">
+                <img onclick="showDiv('div3')" src="img/frappuccino-drink.png" alt="drink">
             </div>
             <div class="rede-social">
                 <a href=""><i class="bi bi-facebook"></i></a>
